--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -3129,7 +3129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "525660e7",
    "metadata": {},
    "outputs": [],
@@ -3155,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "5893eb16",
    "metadata": {},
    "outputs": [],
@@ -3176,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "121268a0",
    "metadata": {},
    "outputs": [
@@ -3201,7 +3201,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>TransactionID</th>\n",
        "      <th>isFraud</th>\n",
        "      <th>TransactionDT</th>\n",
        "      <th>TransactionAmt</th>\n",
@@ -3569,7 +3568,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>1.442330e+05</td>\n",
        "      <td>144233.000000</td>\n",
        "      <td>1.442330e+05</td>\n",
        "      <td>144233.000000</td>\n",
@@ -3935,7 +3933,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>3.236329e+06</td>\n",
        "      <td>0.078470</td>\n",
        "      <td>6.166958e+06</td>\n",
        "      <td>83.554533</td>\n",
@@ -4301,7 +4298,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.788496e+05</td>\n",
        "      <td>0.268911</td>\n",
        "      <td>4.807714e+06</td>\n",
        "      <td>99.850258</td>\n",
@@ -4667,7 +4663,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>2.987004e+06</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>8.650600e+04</td>\n",
        "      <td>0.251000</td>\n",
@@ -5033,7 +5028,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>3.077142e+06</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.885289e+06</td>\n",
        "      <td>25.453000</td>\n",
@@ -5399,7 +5393,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>3.198818e+06</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>4.913738e+06</td>\n",
        "      <td>50.000000</td>\n",
@@ -5765,7 +5758,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>3.392923e+06</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.025794e+07</td>\n",
        "      <td>100.000000</td>\n",
@@ -6131,7 +6123,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>3.577534e+06</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.581103e+07</td>\n",
        "      <td>1800.000000</td>\n",
@@ -6500,35 +6491,35 @@
        "</div>"
       ],
       "text/plain": [
-       "       TransactionID        isFraud  TransactionDT  TransactionAmt  \\\n",
-       "count   1.442330e+05  144233.000000   1.442330e+05   144233.000000   \n",
-       "mean    3.236329e+06       0.078470   6.166958e+06       83.554533   \n",
-       "std     1.788496e+05       0.268911   4.807714e+06       99.850258   \n",
-       "min     2.987004e+06       0.000000   8.650600e+04        0.251000   \n",
-       "25%     3.077142e+06       0.000000   1.885289e+06       25.453000   \n",
-       "50%     3.198818e+06       0.000000   4.913738e+06       50.000000   \n",
-       "75%     3.392923e+06       0.000000   1.025794e+07      100.000000   \n",
-       "max     3.577534e+06       1.000000   1.581103e+07     1800.000000   \n",
+       "             isFraud  TransactionDT  TransactionAmt          card1  \\\n",
+       "count  144233.000000   1.442330e+05   144233.000000  144233.000000   \n",
+       "mean        0.078470   6.166958e+06       83.554533    9879.012528   \n",
+       "std         0.268911   4.807714e+06       99.850258    5047.643179   \n",
+       "min         0.000000   8.650600e+04        0.251000    1000.000000   \n",
+       "25%         0.000000   1.885289e+06       25.453000    5713.000000   \n",
+       "50%         0.000000   4.913738e+06       50.000000    9633.000000   \n",
+       "75%         0.000000   1.025794e+07      100.000000   15063.000000   \n",
+       "max         1.000000   1.581103e+07     1800.000000   18396.000000   \n",
        "\n",
-       "               card1          card2          card3          card5  \\\n",
-       "count  144233.000000  143331.000000  144061.000000  143277.000000   \n",
-       "mean     9879.012528     391.325526     161.695504     191.166293   \n",
-       "std      5047.643179     160.327848      19.410116      44.774337   \n",
-       "min      1000.000000     100.000000     100.000000     100.000000   \n",
-       "25%      5713.000000     264.000000     150.000000     138.000000   \n",
-       "50%      9633.000000     408.000000     150.000000     224.000000   \n",
-       "75%     15063.000000     545.000000     185.000000     226.000000   \n",
-       "max     18396.000000     600.000000     231.000000     237.000000   \n",
+       "               card2          card3          card5         addr1  \\\n",
+       "count  143331.000000  144061.000000  143277.000000  83786.000000   \n",
+       "mean      391.325526     161.695504     191.166293    296.845058   \n",
+       "std       160.327848      19.410116      44.774337     99.307179   \n",
+       "min       100.000000     100.000000     100.000000    100.000000   \n",
+       "25%       264.000000     150.000000     138.000000    204.000000   \n",
+       "50%       408.000000     150.000000     224.000000    299.000000   \n",
+       "75%       545.000000     185.000000     226.000000    330.000000   \n",
+       "max       600.000000     231.000000     237.000000    540.000000   \n",
        "\n",
-       "              addr1         addr2         dist2             C1             C2  \\\n",
-       "count  83786.000000  83786.000000  37593.000000  144233.000000  144233.000000   \n",
-       "mean     296.845058     86.198088    231.945575      27.793681      34.344533   \n",
-       "std       99.307179      5.645163    529.251862     249.745336     291.306999   \n",
-       "min      100.000000     10.000000      0.000000       0.000000       0.000000   \n",
-       "25%      204.000000     87.000000      7.000000       1.000000       1.000000   \n",
-       "50%      299.000000     87.000000     37.000000       1.000000       1.000000   \n",
-       "75%      330.000000     87.000000    206.000000       2.000000       2.000000   \n",
-       "max      540.000000    102.000000  11623.000000    4685.000000    5691.000000   \n",
+       "              addr2         dist2             C1             C2  \\\n",
+       "count  83786.000000  37593.000000  144233.000000  144233.000000   \n",
+       "mean      86.198088    231.945575      27.793681      34.344533   \n",
+       "std        5.645163    529.251862     249.745336     291.306999   \n",
+       "min       10.000000      0.000000       0.000000       0.000000   \n",
+       "25%       87.000000      7.000000       1.000000       1.000000   \n",
+       "50%       87.000000     37.000000       1.000000       1.000000   \n",
+       "75%       87.000000    206.000000       2.000000       2.000000   \n",
+       "max      102.000000  11623.000000    4685.000000    5691.000000   \n",
        "\n",
        "                  C3             C4             C6             C7  \\\n",
        "count  144233.000000  144233.000000  144233.000000  144233.000000   \n",
@@ -7341,7 +7332,7 @@
        "max       29.000000     671.000000     661.000000     32.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7360,7 +7351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "4fc88008",
    "metadata": {},
    "outputs": [
@@ -7390,7 +7381,7 @@
        " 'DeviceInfo']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7401,7 +7392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "25686a00",
    "metadata": {},
    "outputs": [
@@ -7440,7 +7431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "c69f2eaa",
    "metadata": {},
    "outputs": [
@@ -7499,7 +7490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "5e6ec3f2",
    "metadata": {},
    "outputs": [],
@@ -7514,11 +7505,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "14e98985",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# separating target from features\n",
     "train_X = train_set.drop(columns=[TARGET_COL])\n",
     "train_Y = train_set[TARGET_COL]\n",
     "\n",
@@ -7528,7 +7520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "741e5442",
    "metadata": {},
    "outputs": [
@@ -8061,7 +8053,7 @@
        "                ('classifier', LogisticRegression(max_iter=1000))])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8096,8 +8088,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6ca5b3db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PR-AUC (Average Precision): 0.5600\n",
+      "Chosen threshold (max F1): 0.4885\n",
+      "Precision: 0.5807\n",
+      "Recall:    0.5561\n",
+      "F1-score:  0.5682\n",
+      "Confusion Matrix [[TN FP],[FN TP]]:\n",
+      "[[25102  1073]\n",
+      " [ 1186  1486]]\n",
+      "\n",
+      "Classification report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0     0.9549    0.9590    0.9569     26175\n",
+      "           1     0.5807    0.5561    0.5682      2672\n",
+      "\n",
+      "    accuracy                         0.9217     28847\n",
+      "   macro avg     0.7678    0.7576    0.7625     28847\n",
+      "weighted avg     0.9202    0.9217    0.9209     28847\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import (\n",
+    "    average_precision_score,\n",
+    "    precision_recall_curve,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    f1_score,\n",
+    "    confusion_matrix,\n",
+    "    classification_report\n",
+    ")\n",
+    "\n",
+    "# 1) Predict probabilities on validation set\n",
+    "val_proba = baseline_model.predict_proba(val_X)[:, 1]\n",
+    "\n",
+    "# 2) PR-AUC (Average Precision) - primary metric for imbalance\n",
+    "pr_auc = average_precision_score(val_Y, val_proba)\n",
+    "print(f\"PR-AUC (Average Precision): {pr_auc:.4f}\")\n",
+    "\n",
+    "# 3) Choose a threshold that maximizes F1 on validation\n",
+    "precision, recall, thresholds = precision_recall_curve(val_Y, val_proba)\n",
+    "f1_scores = 2 * precision * recall / (precision + recall + 1e-12)\n",
+    "\n",
+    "# thresholds has length = len(precision)-1, so align indices\n",
+    "best_idx = np.argmax(f1_scores[:-1])\n",
+    "threshold = thresholds[best_idx]\n",
+    "print(f\"Chosen threshold (max F1): {threshold:.4f}\")\n",
+    "\n",
+    "# 4) Convert probabilities to predicted labels\n",
+    "val_pred = (val_proba >= threshold).astype(int)\n",
+    "\n",
+    "# 5) Compute precision / recall / F1\n",
+    "prec = precision_score(val_Y, val_pred, zero_division=0)\n",
+    "rec = recall_score(val_Y, val_pred)\n",
+    "f1 = f1_score(val_Y, val_pred)\n",
+    "\n",
+    "print(f\"Precision: {prec:.4f}\")\n",
+    "print(f\"Recall:    {rec:.4f}\")\n",
+    "print(f\"F1-score:  {f1:.4f}\")\n",
+    "\n",
+    "# 6) Confusion matrix\n",
+    "cm = confusion_matrix(val_Y, val_pred)\n",
+    "print(\"Confusion Matrix [[TN FP],[FN TP]]:\")\n",
+    "print(cm)\n",
+    "\n",
+    "# 7) Full classification report\n",
+    "print(\"\\nClassification report:\")\n",
+    "print(classification_report(val_Y, val_pred, digits=4, zero_division=0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a8fad50",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8119,7 +8192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
